--- a/src/main/java/sz/panel/TotalLaba.form
+++ b/src/main/java/sz/panel/TotalLaba.form
@@ -39,7 +39,7 @@
               </Group>
           </Group>
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace min="0" pref="569" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="698" max="32767" attributes="0"/>
               <Component id="jPanel2" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="124" max="-2" attributes="0"/>
           </Group>
@@ -175,28 +175,16 @@
         <Component class="javax.swing.JTable" name="jTable1">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="7" rowCount="4">
-                <Column editable="true" title="no" type="java.lang.Object"/>
-                <Column editable="true" title="tanggal" type="java.lang.Object"/>
-                <Column editable="true" title="tipe" type="java.lang.Object"/>
-                <Column editable="true" title="modal" type="java.lang.Object"/>
-                <Column editable="true" title="jual" type="java.lang.Object"/>
+              <Table columnCount="5" rowCount="4">
+                <Column editable="true" title="No" type="java.lang.Object"/>
+                <Column editable="true" title="Tanggal" type="java.lang.Object"/>
+                <Column editable="true" title="Nama Produk" type="java.lang.Object"/>
                 <Column editable="true" title="Qty" type="java.lang.Object"/>
-                <Column editable="true" title="laba" type="java.lang.Object"/>
+                <Column editable="true" title="Laba" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
-                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                  <Title/>
-                  <Editor/>
-                  <Renderer/>
-                </Column>
-                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                  <Title/>
-                  <Editor/>
-                  <Renderer/>
-                </Column>
                 <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
@@ -281,7 +269,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="14" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Total Pendapatan"/>
+            <Property name="text" type="java.lang.String" value="Total Laba Pendapatan"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="lblTotalLaba">
